[tool.poetry]
name = "ambramelin"
version = "0.1.0"
description = "CLI for commonly-used Ambra operations"
authors = ["palisand <p9alisand@gmail.com>"]

[tool.poetry.dependencies]
ambra-sdk = "^3.21.5"
attrs = "^21.2.0"
cattrs = "^1.8.0"
python = "^3.9"

[tool.poetry.dev-dependencies]
black = "^21.8b0"
docformatter = "^1.4"
flake8 = "^3.9.2"
isort = "^5.9.3"
mypy = "^0.910"
pytest = "^6.2.4"
pytest-mock = "^3.6.1"
tox = "^3.24.3"
tox-poetry-installer = {extras = ["poetry"], version = "^0.8.1"}

[tool.poetry.scripts]
ambra = "ambramelin.main:cli"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
